# typer-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/features/adaptive-mode/: design.md  requirements.md  tasks.md
docs/features/bigram-training/: design.md  requirements.md  tasks.md
docs/features/code-symbols/: design.md  requirements.md  tasks.md
docs/features/common-words/: design.md  requirements.md  tasks.md
docs/features/custom-lessons/: design.md  requirements.md  tasks.md
docs/features/finger-training/: design.md  requirements.md  tasks.md
docs/features/home-row-lessons/: design.md  (+2 more)
docs/plans/: 2026-02-22-layout-selection-design.md  2026-02-22-layout-selection.md
docs/steering/: product.md  release-process.md  structure.md  tech.md
examples/: create_test_stats.rs  generate_test_data.rs  verify_adaptive.rs
scripts/: README.md  fetch_trigrams.py  generate_bigrams.py  generate_common_words.py  generate_trigrams.py  release.sh  update_bigrams.py
src/: app.rs  main.rs
src/content/: adaptive_generator.rs  bigram.rs  bigram_generator.rs  category.rs  code_generator.rs  code_symbols.rs  common_word.rs  common_word_generator.rs  custom.rs  finger_generator.rs  generator.rs  lesson.rs  mod.rs  ngram_generator.rs  trigram.rs  trigram_generator.rs
src/data/: config.rs  mod.rs  stats.rs  storage.rs
src/engine/: adaptive.rs  analytics.rs  mod.rs  scoring.rs  types.rs
src/keyboard/: azerty.rs  mod.rs
src/ui/: analytics.rs  keyboard.rs  mod.rs  render.rs
(+27 files in other folders)
